[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo-copy"
path = "src/bin/echo-copy.rs"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "mini-tokio"
path = "src/bin/mini-tokio.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
futures = "0.3"
crossbeam = "0.8"
